# wot-oracle

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BRD.md  DVM.md  SELF-HOST.md
src/: cache.rs  config.rs  main.rs
src/api/: dvm.rs  http.rs  mod.rs
src/db/: mod.rs  sqlite.rs
src/graph/: bfs.rs  interner.rs  metrics.rs  mod.rs  store.rs
src/sync/: ingestion.rs  mod.rs
