[package]
name = "wot-oracle"
version = "0.2.0"
edition = "2021"
description = "Nostr Web of Trust Oracle - indexes follow graph and provides distance queries"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
nostr-sdk = "0.35"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
parking_lot = "0.12"
rustc-hash = "2"
moka = { version = "0.12", features = ["sync"] }
lru = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower_governor = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
base64ct = "=1.6.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
